--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,16 +5,15 @@ layout: compress
 <html lang="en">
 <head>
 
-    {% if site.analytics-google %}
-        {% include analytics-google.html %}
-    {% endif %}
-
     <meta charset="utf-8">
+    <meta http-equiv=X-UA-Compatible content="IE=edge,chrome=1">
     <meta name=viewport content="width=device-width, initial-scale=1">
+
+    <meta name=description content="{{ site.bio }}">
     <meta name=author content="{{ site.name }}">
 
     {% seo %}
-
+    
     {% include favicon.html %}
 
     <link rel="canonical" href="{{ site.url }}{{ page.url | replace:'index.html','' }}">
@@ -44,6 +43,8 @@ layout: compress
     </div>
 
     {% include icons.html %}
+
+    {% include analytics-google.html %}
 
 </body>
 </html>
