--- a/_sass/components/others.sass
+++ b/_sass/components/others.sass
@@ -1,6 +1,6 @@
 .evidence
     background-image: linear-gradient(to bottom, rgba(39,243,106,0.15), rgba(39,243,106,0.15))
-    color: $beta
+    color: beta
 
 .star
     > .url > .title
@@ -56,6 +56,3 @@
         letter-spacing: 4px
         position: relative
         top: -8px
-
-.lost-container
-    text-align: center
