--- a/_sass/components/share.sass
+++ b/_sass/components/share.sass
@@ -24,6 +24,7 @@
 
     > .twitter,
     > .facebook,
+    > .google-plus,
     > .linkedin,
     > .reddit
         display: inline
@@ -48,16 +49,23 @@
     > .facebook
         background: #4361b3
 
+    > .google-plus
+        background: #dd4b39
+
     > .linkedin
         background: #0077b5
 
     > .reddit
         background: #ff4500
 
+    // #bug
+    // can't use .icon with >
+    // don't know why - sorry
+    // take this insted: youtube.com/watch?v=59Zcx9YbZxI
     svg
         fill: #fff
         position: relative
-        top: 3px	
-        margin: 0	
-        margin-right: 4px	
+        top: 3px
+        margin: 0
+        margin-right: 4px
         display: inherit
